--- a/index.css
+++ b/index.css
@@ -217,22 +217,50 @@ body header .left-column .languages button {
 body header .left-column .languages button.active {
   color: #ffffff;
 }
-body header .navigation {
+@media (max-width: 960px) {
+  body header .navigation-wrapper {
+    display: grid;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    grid-template-rows: 0fr;
+    z-index: 10;
+    transition: 0.3s;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    background: #ffffff;
+    overflow: hidden;
+  }
+  body header .navigation-wrapper.active {
+    grid-template-rows: 1fr;
+    padding: 10px;
+  }
+}
+body header .navigation-wrapper nav {
   display: flex;
   gap: 30px;
 }
 @media (max-width: 960px) {
-  body header .navigation {
-    display: none;
+  body header .navigation-wrapper nav {
+    display: block;
+    min-height: 0;
+    text-align: right;
   }
 }
-body header .navigation a {
+body header .navigation-wrapper nav a {
   color: #ffffff;
   font-weight: 500;
   font-size: 18px;
   line-height: 21.6px;
   font-family: "Lato", sans-serif;
   text-decoration: none;
+}
+@media (max-width: 960px) {
+  body header .navigation-wrapper nav a {
+    display: block;
+    padding: 8px 0;
+    color: #1074d8;
+  }
 }
 body header .right-column {
   display: flex;
