--- a/index.scss
+++ b/index.scss
@@ -129,6 +129,7 @@ button {
     line-height: 14.4px;
     font-family: $font-lato;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 /*  */
