--- a/index.scss
+++ b/index.scss
@@ -11,6 +11,8 @@ $color-grey: #e3e3e5;
 $color-greylight: #ffffff66;
 $color-greyblue: #dfe3ed;
 $color-greydark: #999999;
+$color-red: #ff0000;
+$color-green: #30d930;
 
 $radius-sm: 8px;
 $radius-md: 10px;
@@ -140,6 +142,23 @@ button {
 
     &:hover {
         background: $color-blue;
+    }
+}
+
+input {
+    display: block;
+    margin-top: 25px;
+    border: 1px solid $color-greyblue;
+    padding: 5px 10px;
+    width: 100%;
+    max-width: 270px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 36px;
+    font-family: $font-roboto;
+
+    &::placeholder {
+        color: $color-greydark;
     }
 }
 
@@ -872,25 +891,23 @@ body {
                     form {
                         margin-top: 56px;
 
-                        input {
-                            display: block;
-                            margin-top: 25px;
-                            border: 1px solid $color-greyblue;
-                            padding: 5px 10px;
-                            width: 100%;
-                            max-width: 270px;
-                            font-weight: 400;
-                            font-size: 16px;
-                            line-height: 36px;
-                            font-family: $font-roboto;
-
-                            &::placeholder {
-                                color: $color-greydark;
-                            }
-                        }
-
                         .g-recaptcha {
                             margin-top: 25px;
+                        }
+
+                        .error,
+                        .success {
+                            margin-top: 5px;
+                            font-weight: 500;
+                            font-family: $font-opensans;
+                            display: none;
+
+                            &.error {
+                                color: $color-red;
+                            }
+                            &.success {
+                                color: $color-green;
+                            }
                         }
 
                         button {
